--- a/Learnest.html
+++ b/Learnest.html
@@ -5,12 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Learnest</title>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 	<header id="header" class="header">
 		<div class="nav">
-			<p class="text">Learnest</p>
-			<button type="button" class="log-in-button">LOG IN</button>
+			<div class="nav-1">
+			   <i class="fa-solid fa-circle icon"></i>
+			   <p class="text">Learnest</p>
+			</div>
+			<div class="nav-2">
+				<button type="button" class="log-in-button">LOG IN</button>
+			</div>
 		</div>
 		<div class="header-summary">
 			<div class="header-text">
@@ -31,7 +37,7 @@
 			   <h1 class="description-heading">Courses on your demand</h1>
 			</div>
 			<div class="aside-2">
-				<p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.Donec Placerat nisl magna.. Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aliquam at porttitor sem.</p>
+				<p class="aside-2-para">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.Donec Placerat nisl magna.. Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aliquam at porttitor sem.</p>
 			</div>
 		</div>
 		<div class="about-courses">
@@ -67,8 +73,8 @@
 		<div class="article">
 			<div class="article-section">
 				<div>
-					<h1>Tech summits</h1>
-					<p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
+					<h1 class="article-heading">Tech summits</h1>
+					<p class="article-para">Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
 				</div>
 				<div>
 					<img src="./image/tech_summit.jpg" alt="tech_summit" class="article-img"> 
@@ -76,8 +82,8 @@
 			</div>
 			<div class="article-section">
 				<div>
-					<h1>Bootcamp</h1>
-					<p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
+					<h1 class="article-heading">Bootcamp</h1>
+					<p class="article-para">Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
 				</div>
 				<div>
 					<img src="./image/bootcamp.jfif" alt="bootcamp" class="article-img">
@@ -85,8 +91,8 @@
 			</div>
 			<div class="article-section">
 				<div>
-					<h1>Tech Conference</h1>
-					<p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
+					<h1 class="article-heading">Tech Conference</h1>
+					<p class="article-para">Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
 				</div>
 				<div>
 					<img src="./image/conference-hall.jpg" alt="conference-hall" class="article-img">
@@ -97,8 +103,11 @@
 	<footer>
 		<div class="about-learnest">
 			<div class="footer-section">
-				<h1>Learnest</h1>
-				<p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.Donec Placerat nisl magna,et faucibus arcu condimentum sed.</p>
+				<div class="tag">
+				   <i class="fa-solid fa-circle icon"></i>
+				   <h1 class="text">Learnest</h1>
+				</div>
+				<p class="footer-para">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.Donec Placerat nisl magna,et faucibus arcu condimentum sed.</p>
 			</div>
 			<div class="footer-section">
 				<span>COURSE CATEGORIES</span>
@@ -122,11 +131,26 @@
 			<div class="footer-section">
 				<span>FOLLOW US EVERYWHERE</span>
 				<ul class="social-list">
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li class="icons facebook"><i class="fa-brands fa-facebook-f"></i></li>
+					<li class="icons social"><i class="fa-brands fa-twitter"></i></li>
+					<li class="icons social"><i class="fa-brands fa-linkedin-in"></i></li>
+					<li class="icons social"><i class="fa-brands fa-instagram"></i></li>
 				</ul>
+			</div>
+		</div>
+		<div class="terms">
+			<div class="policys">
+				<div class="terms-section">
+				  <p class="terms-para">Privacy policy</p>
+				  <p class="terms-para">Terms of use</p>
+				  <p class="terms-para">Return and refunds</p>
+				</div>
+				<div>
+				   <p class="copyright">Copyright &#169 2019 Learnest.All Rights Reserved.</p>
+				</div>
+			</div>
+			<div class="pvt-ltd">
+				<p>Learnest <sup>TM</sup> is a registered trademark of ABC PVT LTD</p>
 			</div>
 		</div>
 	</footer>
